Changes version 1.35
================================
  o speedup multiple lsoda solver calls with pre-identified symbol table 
    for compiled models. Feature request and idea from Johannes Ranke.

Changes version 1.34
================================
  o fix deprecated function declaration without prototype
  o fix LaTeX style issue
  o fix netlib.org URL

Changes version 1.33
================================
  o back-compatibility with R <= 3.6.2
    (patch provided by Davis Vaughan) 

Changes version 1.32
================================
  o USE_FC_LEN_T for Fortran BLAS/LAPACK routines
    to ensure compatibility with R > 4.2

Changes version 1.31
================================
  o replace deprecated S constant DOUBLE_XMAX by DBL_MAX

Changes version 1.30
================================
  o add doi to references

Changes version 1.29
================================
   o replace legacy S macros PROBLEM and ERROR in C code with Rf_error()
   o replace http:// with https:// if possible

Changes version 1.28
================================
  o minor: avoid an implicit type conversion at the C level

Changes version 1.27.1
================================
  o C level change to fix symbol clash on MacOS
    solution kindly provided by Brian Ripley

Changes version 1.27
================================
  o C level changes to ensure compatibility with gcc 10
    solution kindly provided by Brian Ripley

Changes version 1.26
================================
  o fix outdated class checks to ensure R 4.0.0 compatibility
    (Karline, Thomas)
  o Fortran modernization: initialization of variables (Karline)

Changes version 1.25
================================
  o add original authors of LINPACK, ODEPACK and SPARSKIT to Authors@R
    (Thomas, Karline, Woody)

Changes version 1.24
================================
  o fix compiler warnings to improve Fortran compatibility 
    (Thomas, Karline, Woody)
    thanks to Brian Ripley and Kurt Hornik